--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,13 @@
+
 spring:
    datasource:
      driver-class-name: com.mysql.jdbc.Driver
      username: root
      password: 1234
      url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+   thymeleaf:
+     prefix: classpath:/templates/
+     suffix: .html
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
